--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,25 @@
     <groupId>com.developersdelicias</groupId>
     <artifactId>unit-test-kata</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>pl.pragmatists</groupId>
@@ -19,8 +33,5 @@
             <version>1.0.6</version>
             <scope>test</scope>
         </dependency>
-
     </dependencies>
-
-
 </project>
